--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -4,10 +4,11 @@
   width: 100%;
   justify-content: center;
   align-items: center;
-  margin-bottom: 200px;
+  padding: 60px 0;
+  background-color: #999;
 }
 
 .form-item {
   display: flex;
-  margin: 20px 0;
+  margin: 10px 0;
 }
