--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -26,6 +26,8 @@ h1 {
   display: flex;
   font-family: 'Anton', sans-serif;
   font-size: 45px;
+  width: 100%;
+  height: 100%;
   text-transform: uppercase;
   justify-content: center;
   align-items: center;
