--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,3 +1,12 @@
 body {
   background-color: black;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+@media (max-width: 600px) {
+  * {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
