--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,6 @@
 .home-container {
   display: flex;
-}
-
-.home-container {
-  display: flex;
   width: 100%;
-  height: 780px;
   justify-content: center;
   align-items: center;
 }
@@ -20,6 +15,7 @@
   justify-content: center;
   align-items: center;
   color: #bbb;
+  margin-top: 70px;
 }
 
 h1 {
